Fixed: wflow-consoleweb - Error Pages - Content not centered in Firefox and IE @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/home/style.css
+++ b/wflow-consoleweb/src/main/webapp/home/style.css
@@ -284,6 +284,7 @@ body.page-body {
 #page-container { 
     display: block; 
     width: fit-content; 
+    max-width: 680px;
     margin: 50px auto; 
     color: #555;
 }
